<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DriverLoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_location" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginDriverTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="163dp"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loginDriverLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginDriverTxt"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="108dp"
            android:drawableLeft="@drawable/ic_baseline_drive_eta_24"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/login_for_driver"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableTint="#FFFFFF" />

        <EditText
            android:id="@+id/loginDriverEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginDriverLabel"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:drawingCacheQuality="high"
            android:ems="10"
            android:fontFamily="@font/sarabun_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/nav_bg"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/loginDriverPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginDriverEmail"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/sarabun_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/nav_bg"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginDriverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginDriverPassword"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/nav_yellow"
            android:fontFamily="@font/sarabun_light"
            android:onClick="gotoControl"
            android:text="@string/login"
            android:textColor="@color/nav_bg"
            app:icon="@drawable/ic_baseline_login_24"
            app:iconTint="@color/nav_bg" />

        <TextView
            android:id="@+id/loginDriverReccom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginDriverButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="61dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/sarabun_light"
            android:onClick="gotoRegister"
            android:text="@string/rec_register"
            android:textColor="@color/white"
            android:textSize="14dp" />


        <TextView
            android:id="@+id/logDriverBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginDriverButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="143dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/sarabun_light"
            android:onClick="goBack"
            android:text="@string/rec_back"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/logDriverResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginDriverButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="242dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/sarabun_light"
            android:onClick="gotoResetPassword"
            android:text="@string/rec_reset_password"
            android:textColor="@color/white"
            android:textSize="14dp" />


    </RelativeLayout>

</FrameLayout>