<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserRegFragment"
    android:background="@color/nav_bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/regisUserTxt"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="82dp"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/regisUserLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regisUserTxt"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="123dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/login_for_user"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:drawableTint="#FFFFFF" />

        <EditText
            android:id="@+id/regisUserEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regisUserLabel"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/sarabun_light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/nav_bg"
            android:textColorHint="@color/nav_bg"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/regisUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regisUserEmail"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/sarabun_light"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/nav_bg"
            android:textColorHint="@color/nav_bg"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/regisUserPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regisUsername"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/sarabun_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/nav_bg"
            android:textColorHint="@color/nav_bg"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/regisUserCCPWD"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regisUserPassword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/sarabun_light"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/nav_bg"
            android:textColorHint="@color/nav_bg"
            android:textSize="14sp" />

        <Button
            android:id="@+id/regisUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regisUserCCPWD"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/nav_yellow"
            android:fontFamily="@font/sarabun_light"
            android:onClick="userRegister"
            android:text="@string/register"
            android:textColor="@color/nav_bg"
            app:icon="@drawable/ic_baseline_person_add_24"
            app:iconTint="@color/nav_bg" />

    </RelativeLayout>

</FrameLayout>