<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@color/nav_bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_location" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/regisDriverTxt"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:fontFamily="@font/sarabun_light"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/regisDriverLabel"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regisDriverTxt"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:fontFamily="@font/sarabun_light"
                android:gravity="center"
                android:text="@string/login_for_driver"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:drawableTint="#FFFFFF" />

            <EditText
                android:id="@+id/regisDriverName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regisDriverLabel"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/sarabun_light"
                android:hint="@string/register_name"
                android:inputType="textNoSuggestions"
                android:padding="5dp"
                android:textColor="@color/nav_bg"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/regisDriverEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regisDriverName"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/sarabun_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/nav_bg"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/regisDriverPhone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regisDriverEmail"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/sarabun_light"
                android:hint="@string/register_phone"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@color/nav_bg"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/regisDriverCar_number"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regisDriverPhone"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/sarabun_light"
                android:hint="@string/bus_number"
                android:inputType="textNoSuggestions"
                android:padding="5dp"
                android:textColor="@color/nav_bg"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/regisDriverPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regisDriverPhone"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/sarabun_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/nav_bg"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/regisDriverCCPWD"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regisDriverPassword"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="@font/sarabun_light"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/nav_bg"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/regisDriverBtn_card_person_txt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regisDriverPassword"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:fontFamily="@font/sarabun_light"
                    android:padding="5dp"
                    android:text="@string/person_card"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="14sp" />

                <ImageButton
                    android:onClick="CardPerson"
                    android:id="@+id/regisDriverBtn_card_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:backgroundTint="@color/nav_yellow"
                    android:fontFamily="@font/sarabun_light"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_baseline_image_24"
                    app:tint="@color/nav_bg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/regisDriverBtn_card_public_txt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regisDriverPassword"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:fontFamily="@font/sarabun_light"
                    android:padding="5dp"
                    android:text="@string/riding_card"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <ImageButton
                    android:onClick="CardPublic"
                    android:id="@+id/regisDriverBtn_card_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:backgroundTint="@color/nav_yellow"
                    android:fontFamily="@font/sarabun_light"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_baseline_image_24"
                    app:tint="@color/nav_bg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/regisDriverBtn_car_picture_txt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regisDriverPassword"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="@font/sarabun_light"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/bus_picture"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <ImageButton
                    android:onClick="CarPicture"
                    android:id="@+id/regisDriverBtn_car_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:backgroundTint="@color/nav_yellow"
                    android:fontFamily="@font/sarabun_light"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_baseline_image_24"
                    app:tint="@color/nav_bg" />

            </LinearLayout>

            <Button
                android:onClick="regisDriverRegister"
                android:id="@+id/regisDriverButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@+id/regisDriverBtn_car_picture"
                android:layout_centerInParent="true"
                android:layout_marginTop="14dp"
                android:backgroundTint="@color/nav_yellow"
                android:fontFamily="@font/sarabun_light"
                android:text="@string/register"
                android:textColor="@color/nav_bg"
                app:icon="@drawable/ic_baseline_person_add_24"
                app:iconTint="@color/nav_bg" />

            <ImageView
                android:layout_width="820px"
                android:layout_height="820px"
                android:layout_gravity="center"
                android:id="@+id/regisDriverPreview_person" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>