<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverResetPasswordFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_location" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/driver_reset_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="163dp"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/driver_label_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driver_reset_header"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="108dp"
            android:drawableLeft="@drawable/ic_baseline_drive_eta_24"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/login_for_driver"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableTint="#FFFFFF" />

        <EditText
            android:id="@+id/driver_email_reset"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driver_label_reset"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:drawingCacheQuality="high"
            android:ems="10"
            android:fontFamily="@font/sarabun_light"
            android:hint="กรอกอีเมลบัญชีของท่าน"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/nav_bg"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/driver_btn_reset"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driver_email_reset"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/nav_yellow"
            android:fontFamily="@font/sarabun_light"
            android:onClick="resetPassword"
            android:text="@string/reset_password"
            android:textColor="@color/nav_bg"
            app:icon="@drawable/ic_baseline_restart_alt_24"
            app:iconTint="@color/nav_bg" />

        <Button
            android:id="@+id/driver_btn_back"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driver_btn_reset"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/ghost_white"
            android:fontFamily="@font/sarabun_light"
            android:onClick="resetBack"
            android:text="@string/reset_back"
            android:textColor="@color/nav_bg"
            app:icon="@drawable/ic_baseline_back_undo"
            app:iconTint="@color/nav_bg" />

        <TextView
            android:id="@+id/driver_reset_confirm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driver_btn_back"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sarabun_light"
            android:textColor="@color/white"
            android:textSize="16dp" />


    </RelativeLayout>

</FrameLayout>